Fix background attachment on mobile attempt 2

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -85,7 +85,7 @@ body, html {
   transform: translateY(-50%);
 }
 
-body:before {
+.lander-image:before {
   content: "";
   display: block;
   position: fixed;
